# dracometric

./: .env.example  .gitignore  404.html  Containerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
api-reference/: index.html
app/: __init__.py  main.py  settings.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/models/: __init__.py  vpn.py
app/routers/: __init__.py  vpn.py
app/services/: __init__.py  latency_service.py  nordvpn_service.py  surfshark_service.py  vpn_service.py
architecture/: index.html
configuration/: index.html
deployment/container/: index.html
deployment/development/: index.html
deployment/production/: index.html
deployment/reverse-proxy/: index.html
docs/: api-reference.md  architecture.md  configuration.md  index.md  installation.md  quickstart.md  security.md
docs/deployment/: container.md  development.md  production.md  reverse-proxy.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
security/: index.html
tests/: __init__.py  conftest.py  test_endpoints.py  test_services.py
